--- a/var/lib/amule/.aMule/amule.conf
+++ b/var/lib/amule/.aMule/amule.conf
@@ -10,10 +10,10 @@ UDPPort=4672
 UDPEnable=1
 Address=
 Autoconnect=1
-MaxSourcesPerFile=300
-MaxConnections=500
+MaxSourcesPerFile=400
+MaxConnections=400
 MaxConnectionsPerFiveSeconds=20
-RemoveDeadServer=1
+RemoveDeadServer=0
 DeadServerRetry=3
 ServerKeepAliveTimeout=0
 Reconnect=1
@@ -22,19 +22,19 @@ Serverlist=0
 AddServerListFromServer=0
 AddServerListFromClient=1
 SafeServerConnect=0
-AutoConnectStaticOnly=0
+AutoConnectStaticOnly=1
 UPnPEnabled=1
 UPnPTCPPort=50000
 SmartIdCheck=1
 ConnectToKad=1
 ConnectToED2K=1
-TempDir=/tmp/amule
+TempDir=/srv/downloads/.tmp/amule
 IncomingDir=/srv/downloads
-ICH=1
+ICH=0
 AICHTrust=0
 CheckDiskspace=1
 MinFreeDiskSpace=2048
-AddNewFilesPaused=1
+AddNewFilesPaused=0
 PreviewPrio=0
 ManualHighPrio=0
 StartNextFile=0
@@ -94,8 +94,8 @@ AllcatType=0
 ShowAllNotCats=0
 SmartIdState=0
 DropSlowSources=0
-KadNodesUrl=http://download.tuxfamily.org/technosalad/utils/nodes.dat
-Ed2kServersUrl=http://gruk.org/server.met.gz
+KadNodesUrl=
+Ed2kServersUrl=
 ShowRatesOnTitle=0
 GeoLiteCountryUpdateUrl=http://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz
 StatsServerName=Shorty's ED2K stats
@@ -133,7 +133,7 @@ WebUPnPTCPPort=50001
 UPnPWebServerEnabled=0
 UseGzip=1
 UseLowRightsUser=1
-PageRefreshTime=120
+PageRefreshTime=60
 Template=
 Path=amuleweb
 [GUI]
