--- a/var/lib/mldonkey/downloads.ini
+++ b/var/lib/mldonkey/downloads.ini
@@ -11,7 +11,7 @@
 
 
 	(* small name of client *)
- client_name = homedesk
+ client_name = "[veryCD]x007007007"
 
 
     (************************************)
@@ -74,7 +74,7 @@
 	(* The maximal upload rate you can tolerate on your link in kBytes/s (0 = no limit)
 	  The limit will apply on all your connections (clients and servers) and both
 	  control and data messages. *)
- max_hard_upload_rate = 10
+ max_hard_upload_rate = 20
 
 	(* The maximal download rate you can tolerate on your link in kBytes/s (0 = no limit)
 	  The limit will apply on all your connections (clients and servers) and both
@@ -82,13 +82,13 @@
 	  >= 10    -> unlimited download
 	  < 10 > 3 -> download limited to upload * 4
 	  < 4      -> download limited to upload * 3 *)
- max_hard_download_rate = 50
+ max_hard_download_rate = 0
 
 	(* Second maximal upload rate for easy toggling (use bw_toggle) *)
- max_hard_upload_rate_2 = 5
+ max_hard_upload_rate_2 = 20
 
 	(* Second maximal download rate for easy toggling (use bw_toggle) *)
- max_hard_download_rate_2 = 20
+ max_hard_download_rate_2 = 100
 
 	(* Maximal number of opened connections *)
  max_opened_connections = 200
@@ -100,11 +100,11 @@
  max_indirect_connections = 30
 
 	(* How many slots can be used for upload, minimum 3 *)
- max_upload_slots = 5
+ max_upload_slots = 10
 
 	(* How many percent of upload slots can be used for downloading files
 	  tagged as release, maximum 75% *)
- max_release_slots = 20
+ max_release_slots = 40
 
 	(* Set aside a single reserved slot to upload to friends *)
  friends_upload_slot = true
@@ -113,10 +113,10 @@
  small_files_slot_limit = 10240
 
 	(* Set this to true if you want to have dynamic upload slot allocation (experimental) *)
- dynamic_slots = false
+ dynamic_slots = true
 
 	(* Maximal number of connections that can be opened per second *)
- max_connections_per_second = 5
+ max_connections_per_second = 8
 
 	(* list of IP addresses allowed to connect to the core with no limit on
 	  upload/download and upload slots.  List separated by spaces, wildcard=255
@@ -143,7 +143,7 @@
 
 	(* Set to true if you also want mldonkey to run as an kademlia client
 	  (enable_donkey must be true, and only experimental) *)
- enable_kademlia = false
+ enable_kademlia = true
 
 	(* Set to true if you want mldonkey to connect to edonkey servers
 	  (enable_donkey must be true, and only experimental) *)
@@ -285,7 +285,7 @@
  release_new_downloads = false
 
 	(* The maximal number of files in Downloading state (other ones are Queued) *)
- max_concurrent_downloads = 50
+ max_concurrent_downloads = 0
 
 	(* The maximal length of zero bytes between non-zero bytes in a file that
 	  should be interpreted as downloaded during a recovery *)
@@ -406,7 +406,7 @@
 
 
 	(* The directory where temporary files should be put *)
- temp_directory = temp
+ temp_directory = "/srv/downloads/.tmp/mldonkey"
 
 	(* How often (in minutes) should MLDonkey scan all shared directories for new/removed files.
 	  Minimum 5, 0 to disable. Use command reshare to manually scan shares.
@@ -453,10 +453,6 @@
 	   on commit and uses the first one with enough free diskspace.
 	   Other strategies can be found in searches.ini, section customized_sharing. *)
  shared_directories = [
-  {     dirname = shared
-     strategy = all_files
-     priority = 0
-};
   {     dirname = "/srv/downloads/files"
      strategy = incoming_files
      priority = 0
@@ -722,7 +718,7 @@
  html_mods_vd_gfx_remove = false
 
 	(* Fill graph in vd output *)
- html_mods_vd_gfx_fill = true
+ html_mods_vd_gfx_fill = false
 
 	(* Split download and upload graph in vd output *)
  html_mods_vd_gfx_split = false
