--- a/var/lib/amule/.aMule/amule.conf
+++ b/var/lib/amule/.aMule/amule.conf
@@ -1,10 +1,10 @@
 [eMule]
 AppVersion=2.3.1
-Nick=[verycd]x007007007
+Nick=[veryCD]x007007007/HOME
 QueueSizePref=50
 MaxUpload=40
 MaxDownload=0
-SlotAllocation=20
+SlotAllocation=100
 Port=4662
 UDPPort=4672
 UDPEnable=1
@@ -20,7 +20,7 @@ Reconnect=1
 Scoresystem=1
 Serverlist=0
 AddServerListFromServer=0
-AddServerListFromClient=1
+AddServerListFromClient=0
 SafeServerConnect=0
 AutoConnectStaticOnly=1
 UPnPEnabled=1
@@ -30,13 +30,13 @@ ConnectToKad=1
 ConnectToED2K=1
 TempDir=/srv/downloads/.tmp/amule
 IncomingDir=/srv/downloads
-ICH=0
-AICHTrust=0
+ICH=1
+AICHTrust=1
 CheckDiskspace=1
 MinFreeDiskSpace=2048
 AddNewFilesPaused=0
 PreviewPrio=0
-ManualHighPrio=0
+ManualHighPrio=1
 StartNextFile=0
 StartNextFileSameCat=0
 StartNextFileAlpha=0
@@ -65,7 +65,7 @@ DownloadCapacity=400
 UploadCapacity=50
 StatsAverageMinutes=5
 VariousStatisticsMaxValue=100
-SeeShare=2
+SeeShare=1
 FilterLanIPs=1
 ParanoidFiltering=1
 IPFilterAutoLoad=1
@@ -81,7 +81,7 @@ MessageFilter=
 ShowMessagesInLog=1
 FilterComments=0
 CommentFilter=
-ShareHiddenFiles=0
+ShareHiddenFiles=1
 AutoSortDownloads=0
 NewVersionCheck=0
 AdvancedSpamFilter=1
@@ -112,7 +112,7 @@ ProxyEnablePassword=0
 ProxyUser=
 ProxyPassword=
 [ExternalConnect]
-UseSrcSeeds=0
+UseSrcSeeds=1
 AcceptExternalConnections=1
 ECAddress=
 ECPort=4712
@@ -126,15 +126,15 @@ IpFilterServers=1
 TransmitOnlyUploadingClients=0
 [WebServer]
 Enabled=1
-Password=f9eb739b0236def07ed18dfac3d83f59
-PasswordLow=23da39b4df4d8b2cbdd976edd4df4301
+Password=F9EB739B0236DEF07ED18DFAC3D83F59
+PasswordLow=23DA39B4DF4D8B2CBDD976EDD4DF4301
 Port=4004
 WebUPnPTCPPort=50001
 UPnPWebServerEnabled=0
 UseGzip=1
 UseLowRightsUser=1
-PageRefreshTime=60
-Template=
+PageRefreshTime=120
+Template=default
 Path=amuleweb
 [GUI]
 HideOnClose=0
