samba 添加iso目录 uploads目录被移动到files下

--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -296,7 +296,7 @@
 
 [uploads]
   comment = XXC's uploader
-  path = /srv/uploads
+  path = /srv/files/uploads
   guest ok = no
   public = no
   browseable = yes
@@ -307,6 +307,20 @@
   write list = @uploader,@smbuploader 
   create mask = 0775
   directory mask = 0775
+
+[book]
+  comment = XXC fileservice's Music
+  path = /srv/files/book
+  read only = yes
+  browseable = yes
+  guest ok = yes
+
+[iso]
+  comment = XXC fileservice's Music
+  path = /srv/files/iso
+  read only = yes
+  browseable = yes
+  guest ok = yes
 
 # The next two parameters show how to auto-mount a CD-ROM when the
 #	cdrom share is accesed. For this to work /etc/fstab must contain
